--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "homepage":"http://Harsh2355.github.io/Youtube-API-project",
+  "homepage": "http://Harsh2355.github.io/Youtube-API-project",
   "name": "youtube-clone-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
